--- a/RedCross/RedCross/RedCross.csproj
+++ b/RedCross/RedCross/RedCross.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data">
-      <HintPath>..\..\..\服务终端机 1.3 版本\SocktetWindowsForms\LibConnectToDB\LibConnectToDB\bin\Debug\MySql.Data.dll</HintPath>
+    <Reference Include="MySql.Data, Version=6.5.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Lib\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Private>True</Private>
@@ -58,7 +59,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Lib\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -256,6 +258,8 @@
     <Content Include="Images\安达充3.jpg" />
     <Content Include="img\glyphicons-halflings-white.png" />
     <Content Include="img\glyphicons-halflings.png" />
+    <Content Include="Lib\MySql.Data.dll" />
+    <Content Include="Lib\System.Web.Mvc.dll" />
     <Content Include="Scripts\Rc\ActivityVerify.js" />
     <Content Include="Scripts\Rc\ApplyVerify.js" />
     <Content Include="Scripts\Rc\DepartmentVerify.js" />
